<resources>
    <string name="app_name">App</string>
    <string name="author">Leonardo Alps (alve0024)</string>
    <string name="action_about">About</string>
    <string name="title">Get data</string>
    <string name="get_data">Get data</string>
    <string name="building_name_placeholder">Name</string>
    <string name="building_address_placeholder">Address</string>
    <string name="building_image_placeholder">Image location</string>
    <string name="building_description_placeholder">Description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="no_network">Network is not available</string>

</resources>
