<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_building"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.algonquincollege.alve0024.doorsopenottawa.EditBuildingActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameLabel"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="normal|bold"
            android:textAlignment="center" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/addressTxt"
            android:hint="@string/building_address_placeholder" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="189dp"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/descriptionTxt"
            android:singleLine="false"
            android:selectAllOnFocus="false" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="@string/cancel"
                android:layout_width="174dp"
                android:layout_height="wrap_content"
                android:id="@+id/cancelBtn"
                android:layout_weight="0.22"
                android:onClick="cancelBuilding"/>

            <Button
                android:text="@string/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/saveBtn"
                android:layout_weight="1"
                android:onClick="saveBuilding"/>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
